fix small screen nav-wrap padding size

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -60,8 +60,8 @@ header {
 @media (max-width: 577px) {
     .nav-items {
       flex-direction: row;
-      align-items: center;
-      padding: 5px 30px 0; 
+    //   align-items: center;
+    //   padding: 5px 30px 0; 
       justify-content: space-between;     
     }
 
@@ -71,7 +71,7 @@ header {
     }
 
     .nav-wrap {
-        padding-left: 35%;
+        padding-left: 40vh;
         
     }
 }
